--- a/report.html
+++ b/report.html
@@ -13318,7 +13318,7 @@ sxDkAAAAAElFTkSuQmCC
 <div class="text_cell_render border-box-sizing rendered_html">
 <h3 id="&#38382;&#39064;-4---&#22238;&#31572;:">&#38382;&#39064; 4 - &#22238;&#31572;:<a class="anchor-link" href="#&#38382;&#39064;-4---&#22238;&#31572;:">&#182;</a></h3><p>最大深度为3时，随着数据量的增加，训练集曲线评分下降，验证集曲线评分上升，数值逐渐接近，最终收敛，且在4副图中得分差最低。</p>
 <p>max_depth = 1时，学习曲线收敛于较低的r2得分，说明存在较大的偏差，模型欠拟合；</p>
-<p>max_depth = 6和10时，学习曲线收敛，但两条曲线的得分相差较大，说明存在较大的偏差，模型过拟合。</p>
+<p>max_depth = 6和10时，学习曲线收敛，但两条曲线的得分相差较大，说明存在较大的方差，模型过拟合。</p>
 
 </div>
 </div>
@@ -13862,11 +13862,12 @@ Y4wJKpb4jDHGBBVLfMYYY4LK/wNf5l6uJcEUZwAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#38382;&#39064;-8---&#22238;&#31572;&#65306;">&#38382;&#39064; 8 - &#22238;&#31572;&#65306;<a class="anchor-link" href="#&#38382;&#39064;-8---&#22238;&#31572;&#65306;">&#182;</a></h3><p>K折交叉验证法，将数据集划分为k个大小相似的互斥子集，每次用（k-1）个子集的并集作为训练集，余下的那个子集作为测试集，这样可以获得k组训练/测试集，进行k次训练测试之后返回k个测试结果的均值。</p>
+<h3 id="&#38382;&#39064;-8---&#22238;&#31572;&#65306;">&#38382;&#39064; 8 - &#22238;&#31572;&#65306;<a class="anchor-link" href="#&#38382;&#39064;-8---&#22238;&#31572;&#65306;">&#182;</a></h3><p>K折交叉验证法，将数据集划分为k个大小相似的互斥子集，每次用（k-1）个子集的并集作为训练集，余下的那个子集作为测试集，这样可以获得k组训练/测试集，进行k次训练测试之后返回k个测试结果的均值。<em>【from 《机器学习》周志华 著】</em></p>
+<p><strong>实际使用K-折交叉验证法，是将传入的训练集划分为k个子集，其中（k-1）个训练集和1个验证集，经过k次训练验证之后返回平均值。如果网格搜索中有m个参数，则需要经过(m * k）次训练/验证。</strong></p>
 <p>sklearn.model_selection.GridSearchCV方法中，设置cv参数可以设定K折交叉验证的K值大小。</p>
-<p><code>'cv_results_'</code>记录调参过程中所选择的参数和结果信息，以DataFrame的结构存储。</p>
-<p>对于同样比例的训练/测试集，存在多种划分方式，如果不使用交叉验证，可能因为划分数据的方式不同，导致模型的评估结果会有差异。</p>
-<p>交叉验证可以获得K组训练/测试集，得到的是k次测试的平均值。这样得到的结果更稳定可靠。</p>
+<p><code>'cv_results_'</code>记录调参过程中所选择的参数和结果信息，以<strong>字典</strong>的结构存储。</p>
+<p>对于同样比例的训练/验证集，存在多种划分方式，如果不使用交叉验证，可能因为划分数据的方式不同，导致模型的评估结果会有差异。</p>
+<p>交叉验证可以获得K组训练/验证集，得到的是k次测试的平均值。这样得到的结果更稳定可靠。</p>
 
 </div>
 </div>
@@ -14026,7 +14027,8 @@ Y4wJKpb4jDHGBBVLfMYYY4LK/wNf5l6uJcEUZwAAAABJRU5ErkJggg==
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#38382;&#39064;-9---&#22238;&#31572;&#65306;">&#38382;&#39064; 9 - &#22238;&#31572;&#65306;<a class="anchor-link" href="#&#38382;&#39064;-9---&#22238;&#31572;&#65306;">&#182;</a></h3>
+<h3 id="&#38382;&#39064;-9---&#22238;&#31572;&#65306;">&#38382;&#39064; 9 - &#22238;&#31572;&#65306;<a class="anchor-link" href="#&#38382;&#39064;-9---&#22238;&#31572;&#65306;">&#182;</a></h3><p>最优模型的最大深度是4，与问题6的猜测一致。</p>
+
 </div>
 </div>
 </div>
@@ -14291,7 +14293,7 @@ Range in prices: $29,438.89
 </div>
 <div class="inner_cell">
 <div class="text_cell_render border-box-sizing rendered_html">
-<h3 id="&#38382;&#39064;-12---&#22238;&#31572;&#65306;">&#38382;&#39064; 12 - &#22238;&#31572;&#65306;<a class="anchor-link" href="#&#38382;&#39064;-12---&#22238;&#31572;&#65306;">&#182;</a></h3><p>预测结果的波动在 ±4% ，模型比较健壮。</p>
+<h3 id="&#38382;&#39064;-12---&#22238;&#31572;&#65306;">&#38382;&#39064; 12 - &#22238;&#31572;&#65306;<a class="anchor-link" href="#&#38382;&#39064;-12---&#22238;&#31572;&#65306;">&#182;</a></h3><p>10次预测结果的平均值为$409,246.00，波动幅度在7.2% ，模型比较健壮。</p>
 
 </div>
 </div>
